Lab1/Code/syntax.output
Terminals unused in grammar

    LOWER_THAN_ELSE


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | ε

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | error SEMI
    8       | Specifier error SEMI
    9       | error Specifier SEMI
   10       | error RP
   11       | error RC
   12       | error Specifier error CompSt

   13 ExtDecList: VarDec
   14           | VarDec COMMA ExtDecList
   15           | VarDec error ExtDefList

   16 Specifier: TYPE
   17          | StructSpecifier

   18 StructSpecifier: STRUCT OptTag LC DefList RC
   19                | STRUCT Tag

   20 OptTag: ID
   21       | ε

   22 Tag: ID

   23 VarDec: ID
   24       | VarDec LB INT RB
   25       | VarDec LB error RB

   26 FunDec: ID LP VarList RP
   27       | ID LP RP
   28       | ID LP error RP
   29       | error LP VarList RP

   30 VarList: ParamDec COMMA VarList
   31        | ParamDec

   32 ParamDec: Specifier VarDec

   33 CompSt: LC DefList StmtList RC
   34       | error RC

   35 StmtList: Stmt StmtList
   36         | ε

   37 Stmt: Exp SEMI
   38     | CompSt
   39     | RETURN Exp SEMI
   40     | IF LP Exp RP Stmt
   41     | IF LP Exp RP Stmt ELSE Stmt
   42     | WHILE LP Exp RP Stmt
   43     | error SEMI
   44     | Exp error SEMI
   45     | RETURN Exp error
   46     | RETURN error SEMI
   47     | IF error ELSE Stmt
   48     | WHILE error RP
   49     | WHILE error RC

   50 DefList: Def DefList
   51        | ε

   52 Def: Specifier DecList SEMI
   53    | Specifier error SEMI
   54    | Specifier DecList error

   55 DecList: Dec
   56        | Dec COMMA DecList

   57 Dec: VarDec
   58    | VarDec ASSIGNOP Exp

   59 Exp: Exp ASSIGNOP Exp
   60    | Exp AND Exp
   61    | Exp OR Exp
   62    | Exp RELOP Exp
   63    | Exp PLUS Exp
   64    | Exp MINUS Exp
   65    | Exp STAR Exp
   66    | Exp DIV Exp
   67    | LP Exp RP
   68    | MINUS Exp
   69    | NOT Exp
   70    | ID LP Args RP
   71    | ID LP RP
   72    | Exp LB Exp RB
   73    | Exp DOT ID
   74    | ID
   75    | INT
   76    | FLOAT
   77    | Exp ASSIGNOP error
   78    | Exp AND error
   79    | Exp OR error
   80    | Exp RELOP error
   81    | Exp PLUS error
   82    | Exp MINUS error
   83    | Exp STAR error
   84    | Exp DIV error
   85    | LP error RP
   86    | MINUS error
   87    | NOT error
   88    | ID LP error RP
   89    | ID LP error SEMI
   90    | Exp LB error RB

   91 Args: Exp COMMA Args
   92     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 7 8 9 10 11 12 15 25 28 29 34 43 44 45 46 47 48 49 53 54 77 78 79 80 81 82 83 84 85 86 87 88 89 90
    INT <node> (258) 24 75
    FLOAT <node> (259) 76
    ID <node> (260) 20 22 23 26 27 28 70 71 73 74 88 89
    SEMI <node> (261) 4 5 7 8 9 37 39 43 44 46 52 53 89
    COMMA <node> (262) 14 30 56 91
    ASSIGNOP <node> (263) 58 59 77
    RELOP <node> (264) 62 80
    PLUS <node> (265) 63 81
    MINUS <node> (266) 64 68 82 86
    STAR <node> (267) 65 83
    DIV <node> (268) 66 84
    AND <node> (269) 60 78
    OR <node> (270) 61 79
    DOT <node> (271) 73
    NOT <node> (272) 69 87
    TYPE <node> (273) 16
    LP <node> (274) 26 27 28 29 40 41 42 67 70 71 85 88 89
    RP <node> (275) 10 26 27 28 29 40 41 42 48 67 70 71 85 88
    LB <node> (276) 24 25 72 90
    RB <node> (277) 24 25 72 90
    LC <node> (278) 18 33
    RC <node> (279) 11 18 33 34 49
    STRUCT <node> (280) 18 19
    RETURN <node> (281) 39 45 46
    IF <node> (282) 40 41 47
    ELSE <node> (283) 41 47
    WHILE <node> (284) 42 48 49
    LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

    $accept (31)
        on left: 0
    Program <node> (32)
        on left: 1
        on right: 0
    ExtDefList <node> (33)
        on left: 2 3
        on right: 1 2 15
    ExtDef <node> (34)
        on left: 4 5 6 7 8 9 10 11 12
        on right: 2
    ExtDecList <node> (35)
        on left: 13 14 15
        on right: 4 14
    Specifier <node> (36)
        on left: 16 17
        on right: 4 5 6 8 9 12 32 52 53 54
    StructSpecifier <node> (37)
        on left: 18 19
        on right: 17
    OptTag <node> (38)
        on left: 20 21
        on right: 18
    Tag <node> (39)
        on left: 22
        on right: 19
    VarDec <node> (40)
        on left: 23 24 25
        on right: 13 14 15 24 25 32 57 58
    FunDec <node> (41)
        on left: 26 27 28 29
        on right: 6
    VarList <node> (42)
        on left: 30 31
        on right: 26 29 30
    ParamDec <node> (43)
        on left: 32
        on right: 30 31
    CompSt <node> (44)
        on left: 33 34
        on right: 6 12 38
    StmtList <node> (45)
        on left: 35 36
        on right: 33 35
    Stmt <node> (46)
        on left: 37 38 39 40 41 42 43 44 45 46 47 48 49
        on right: 35 40 41 42 47
    DefList <node> (47)
        on left: 50 51
        on right: 18 33 50
    Def <node> (48)
        on left: 52 53 54
        on right: 50
    DecList <node> (49)
        on left: 55 56
        on right: 52 54 56
    Dec <node> (50)
        on left: 57 58
        on right: 55 56
    Exp <node> (51)
        on left: 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90
        on right: 37 39 40 41 42 44 45 58 59 60 61 62 63 64 65 66 67 68 69 72 73 77 78 79 80 81 82 83 84 90 91 92
    Args <node> (52)
        on left: 91 92
        on right: 70 91


State 0

    0 $accept: • Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    7 ExtDef: error • SEMI
    9       | error • Specifier SEMI
   10       | error • RP
   11       | error • RC
   12       | error • Specifier error CompSt

    SEMI    shift, and go to state 9
    TYPE    shift, and go to state 2
    RP      shift, and go to state 10
    RC      shift, and go to state 11
    STRUCT  shift, and go to state 3

    Specifier        go to state 12
    StructSpecifier  go to state 8


State 2

   16 Specifier: TYPE •

    $default  reduce using rule 16 (Specifier)


State 3

   18 StructSpecifier: STRUCT • OptTag LC DefList RC
   19                | STRUCT • Tag

    ID  shift, and go to state 13

    $default  reduce using rule 21 (OptTag)

    OptTag  go to state 14
    Tag     go to state 15


State 4

    0 $accept: Program • $end

    $end  shift, and go to state 16


State 5

    1 Program: ExtDefList •

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef • ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)
    SEMI  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 17
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier • ExtDecList SEMI
    5       | Specifier • SEMI
    6       | Specifier • FunDec CompSt
    8       | Specifier • error SEMI

    error  shift, and go to state 18
    ID     shift, and go to state 19
    SEMI   shift, and go to state 20

    ExtDecList  go to state 21
    VarDec      go to state 22
    FunDec      go to state 23


State 8

   17 Specifier: StructSpecifier •

    $default  reduce using rule 17 (Specifier)


State 9

    7 ExtDef: error SEMI •

    $default  reduce using rule 7 (ExtDef)


State 10

   10 ExtDef: error RP •

    $default  reduce using rule 10 (ExtDef)


State 11

   11 ExtDef: error RC •

    $default  reduce using rule 11 (ExtDef)


State 12

    9 ExtDef: error Specifier • SEMI
   12       | error Specifier • error CompSt

    error  shift, and go to state 24
    SEMI   shift, and go to state 25


State 13

   20 OptTag: ID •
   22 Tag: ID •

    LC        reduce using rule 20 (OptTag)
    $default  reduce using rule 22 (Tag)


State 14

   18 StructSpecifier: STRUCT OptTag • LC DefList RC

    LC  shift, and go to state 26


State 15

   19 StructSpecifier: STRUCT Tag •

    $default  reduce using rule 19 (StructSpecifier)


State 16

    0 $accept: Program $end •

    $default  accept


State 17

    2 ExtDefList: ExtDef ExtDefList •

    $default  reduce using rule 2 (ExtDefList)


State 18

    8 ExtDef: Specifier error • SEMI
   29 FunDec: error • LP VarList RP

    SEMI  shift, and go to state 27
    LP    shift, and go to state 28


State 19

   23 VarDec: ID •
   26 FunDec: ID • LP VarList RP
   27       | ID • LP RP
   28       | ID • LP error RP

    LP  shift, and go to state 29

    $default  reduce using rule 23 (VarDec)


State 20

    5 ExtDef: Specifier SEMI •

    $default  reduce using rule 5 (ExtDef)


State 21

    4 ExtDef: Specifier ExtDecList • SEMI

    SEMI  shift, and go to state 30


State 22

   13 ExtDecList: VarDec •
   14           | VarDec • COMMA ExtDecList
   15           | VarDec • error ExtDefList
   24 VarDec: VarDec • LB INT RB
   25       | VarDec • LB error RB

    error  shift, and go to state 31
    COMMA  shift, and go to state 32
    LB     shift, and go to state 33

    SEMI  reduce using rule 13 (ExtDecList)


State 23

    6 ExtDef: Specifier FunDec • CompSt

    error  shift, and go to state 34
    LC     shift, and go to state 35

    CompSt  go to state 36


State 24

   12 ExtDef: error Specifier error • CompSt

    error  shift, and go to state 34
    LC     shift, and go to state 35

    CompSt  go to state 37


State 25

    9 ExtDef: error Specifier SEMI •

    $default  reduce using rule 9 (ExtDef)


State 26

   18 StructSpecifier: STRUCT OptTag LC • DefList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 51 (DefList)

    Specifier        go to state 38
    StructSpecifier  go to state 8
    DefList          go to state 39
    Def              go to state 40


State 27

    8 ExtDef: Specifier error SEMI •

    $default  reduce using rule 8 (ExtDef)


State 28

   29 FunDec: error LP • VarList RP

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 41
    StructSpecifier  go to state 8
    VarList          go to state 42
    ParamDec         go to state 43


State 29

   26 FunDec: ID LP • VarList RP
   27       | ID LP • RP
   28       | ID LP • error RP

    error   shift, and go to state 44
    TYPE    shift, and go to state 2
    RP      shift, and go to state 45
    STRUCT  shift, and go to state 3

    Specifier        go to state 41
    StructSpecifier  go to state 8
    VarList          go to state 46
    ParamDec         go to state 43


State 30

    4 ExtDef: Specifier ExtDecList SEMI •

    $default  reduce using rule 4 (ExtDef)


State 31

   15 ExtDecList: VarDec error • ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    SEMI  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 47
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 32

   14 ExtDecList: VarDec COMMA • ExtDecList

    ID  shift, and go to state 48

    ExtDecList  go to state 49
    VarDec      go to state 22


State 33

   24 VarDec: VarDec LB • INT RB
   25       | VarDec LB • error RB

    error  shift, and go to state 50
    INT    shift, and go to state 51


State 34

   34 CompSt: error • RC

    RC  shift, and go to state 52


State 35

   33 CompSt: LC • DefList StmtList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 51 (DefList)

    Specifier        go to state 38
    StructSpecifier  go to state 8
    DefList          go to state 53
    Def              go to state 40


State 36

    6 ExtDef: Specifier FunDec CompSt •

    $default  reduce using rule 6 (ExtDef)


State 37

   12 ExtDef: error Specifier error CompSt •

    $default  reduce using rule 12 (ExtDef)


State 38

   52 Def: Specifier • DecList SEMI
   53    | Specifier • error SEMI
   54    | Specifier • DecList error

    error  shift, and go to state 54
    ID     shift, and go to state 48

    VarDec   go to state 55
    DecList  go to state 56
    Dec      go to state 57


State 39

   18 StructSpecifier: STRUCT OptTag LC DefList • RC

    RC  shift, and go to state 58


State 40

   50 DefList: Def • DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 51 (DefList)

    Specifier        go to state 38
    StructSpecifier  go to state 8
    DefList          go to state 59
    Def              go to state 40


State 41

   32 ParamDec: Specifier • VarDec

    ID  shift, and go to state 48

    VarDec  go to state 60


State 42

   29 FunDec: error LP VarList • RP

    RP  shift, and go to state 61


State 43

   30 VarList: ParamDec • COMMA VarList
   31        | ParamDec •

    COMMA  shift, and go to state 62

    $default  reduce using rule 31 (VarList)


State 44

   28 FunDec: ID LP error • RP

    RP  shift, and go to state 63


State 45

   27 FunDec: ID LP RP •

    $default  reduce using rule 27 (FunDec)


State 46

   26 FunDec: ID LP VarList • RP

    RP  shift, and go to state 64


State 47

   15 ExtDecList: VarDec error ExtDefList •

    $default  reduce using rule 15 (ExtDecList)


State 48

   23 VarDec: ID •

    $default  reduce using rule 23 (VarDec)


State 49

   14 ExtDecList: VarDec COMMA ExtDecList •

    $default  reduce using rule 14 (ExtDecList)


State 50

   25 VarDec: VarDec LB error • RB

    RB  shift, and go to state 65


State 51

   24 VarDec: VarDec LB INT • RB

    RB  shift, and go to state 66


State 52

   34 CompSt: error RC •

    $default  reduce using rule 34 (CompSt)


State 53

   33 CompSt: LC DefList • StmtList RC

    error   shift, and go to state 67
    INT     shift, and go to state 68
    FLOAT   shift, and go to state 69
    ID      shift, and go to state 70
    MINUS   shift, and go to state 71
    NOT     shift, and go to state 72
    LP      shift, and go to state 73
    LC      shift, and go to state 35
    RETURN  shift, and go to state 74
    IF      shift, and go to state 75
    WHILE   shift, and go to state 76

    RC  reduce using rule 36 (StmtList)

    CompSt    go to state 77
    StmtList  go to state 78
    Stmt      go to state 79
    Exp       go to state 80


State 54

   53 Def: Specifier error • SEMI

    SEMI  shift, and go to state 81


State 55

   24 VarDec: VarDec • LB INT RB
   25       | VarDec • LB error RB
   57 Dec: VarDec •
   58    | VarDec • ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 82
    LB        shift, and go to state 33

    $default  reduce using rule 57 (Dec)


State 56

   52 Def: Specifier DecList • SEMI
   54    | Specifier DecList • error

    error  shift, and go to state 83
    SEMI   shift, and go to state 84


State 57

   55 DecList: Dec •
   56        | Dec • COMMA DecList

    COMMA  shift, and go to state 85

    $default  reduce using rule 55 (DecList)


State 58

   18 StructSpecifier: STRUCT OptTag LC DefList RC •

    $default  reduce using rule 18 (StructSpecifier)


State 59

   50 DefList: Def DefList •

    $default  reduce using rule 50 (DefList)


State 60

   24 VarDec: VarDec • LB INT RB
   25       | VarDec • LB error RB
   32 ParamDec: Specifier VarDec •

    LB  shift, and go to state 33

    $default  reduce using rule 32 (ParamDec)


State 61

   29 FunDec: error LP VarList RP •

    $default  reduce using rule 29 (FunDec)


State 62

   30 VarList: ParamDec COMMA • VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 41
    StructSpecifier  go to state 8
    VarList          go to state 86
    ParamDec         go to state 43


State 63

   28 FunDec: ID LP error RP •

    $default  reduce using rule 28 (FunDec)


State 64

   26 FunDec: ID LP VarList RP •

    $default  reduce using rule 26 (FunDec)


State 65

   25 VarDec: VarDec LB error RB •

    $default  reduce using rule 25 (VarDec)


State 66

   24 VarDec: VarDec LB INT RB •

    $default  reduce using rule 24 (VarDec)


State 67

   34 CompSt: error • RC
   43 Stmt: error • SEMI

    SEMI  shift, and go to state 87
    RC    shift, and go to state 52


State 68

   75 Exp: INT •

    $default  reduce using rule 75 (Exp)


State 69

   76 Exp: FLOAT •

    $default  reduce using rule 76 (Exp)


State 70

   70 Exp: ID • LP Args RP
   71    | ID • LP RP
   74    | ID •
   88    | ID • LP error RP
   89    | ID • LP error SEMI

    LP  shift, and go to state 88

    $default  reduce using rule 74 (Exp)


State 71

   68 Exp: MINUS • Exp
   86    | MINUS • error

    error  shift, and go to state 89
    INT    shift, and go to state 68
    FLOAT  shift, and go to state 69
    ID     shift, and go to state 70
    MINUS  shift, and go to state 71
    NOT    shift, and go to state 72
    LP     shift, and go to state 73

    Exp  go to state 90


State 72

   69 Exp: NOT • Exp
   87    | NOT • error

    error  shift, and go to state 91
    INT    shift, and go to state 68
    FLOAT  shift, and go to state 69
    ID     shift, and go to state 70
    MINUS  shift, and go to state 71
    NOT    shift, and go to state 72
    LP     shift, and go to state 73

    Exp  go to state 92


State 73

   67 Exp: LP • Exp RP
   85    | LP • error RP

    error  shift, and go to state 93
    INT    shift, and go to state 68
    FLOAT  shift, and go to state 69
    ID     shift, and go to state 70
    MINUS  shift, and go to state 71
    NOT    shift, and go to state 72
    LP     shift, and go to state 73

    Exp  go to state 94


State 74

   39 Stmt: RETURN • Exp SEMI
   45     | RETURN • Exp error
   46     | RETURN • error SEMI

    error  shift, and go to state 95
    INT    shift, and go to state 68
    FLOAT  shift, and go to state 69
    ID     shift, and go to state 70
    MINUS  shift, and go to state 71
    NOT    shift, and go to state 72
    LP     shift, and go to state 73

    Exp  go to state 96


State 75

   40 Stmt: IF • LP Exp RP Stmt
   41     | IF • LP Exp RP Stmt ELSE Stmt
   47     | IF • error ELSE Stmt

    error  shift, and go to state 97
    LP     shift, and go to state 98


State 76

   42 Stmt: WHILE • LP Exp RP Stmt
   48     | WHILE • error RP
   49     | WHILE • error RC

    error  shift, and go to state 99
    LP     shift, and go to state 100


State 77

   38 Stmt: CompSt •

    $default  reduce using rule 38 (Stmt)


State 78

   33 CompSt: LC DefList StmtList • RC

    RC  shift, and go to state 101


State 79

   35 StmtList: Stmt • StmtList

    error   shift, and go to state 67
    INT     shift, and go to state 68
    FLOAT   shift, and go to state 69
    ID      shift, and go to state 70
    MINUS   shift, and go to state 71
    NOT     shift, and go to state 72
    LP      shift, and go to state 73
    LC      shift, and go to state 35
    RETURN  shift, and go to state 74
    IF      shift, and go to state 75
    WHILE   shift, and go to state 76

    RC  reduce using rule 36 (StmtList)

    CompSt    go to state 77
    StmtList  go to state 102
    Stmt      go to state 79
    Exp       go to state 80


State 80

   37 Stmt: Exp • SEMI
   44     | Exp • error SEMI
   59 Exp: Exp • ASSIGNOP Exp
   60    | Exp • AND Exp
   61    | Exp • OR Exp
   62    | Exp • RELOP Exp
   63    | Exp • PLUS Exp
   64    | Exp • MINUS Exp
   65    | Exp • STAR Exp
   66    | Exp • DIV Exp
   72    | Exp • LB Exp RB
   73    | Exp • DOT ID
   77    | Exp • ASSIGNOP error
   78    | Exp • AND error
   79    | Exp • OR error
   80    | Exp • RELOP error
   81    | Exp • PLUS error
   82    | Exp • MINUS error
   83    | Exp • STAR error
   84    | Exp • DIV error
   90    | Exp • LB error RB

    error     shift, and go to state 103
    SEMI      shift, and go to state 104
    ASSIGNOP  shift, and go to state 105
    RELOP     shift, and go to state 106
    PLUS      shift, and go to state 107
    MINUS     shift, and go to state 108
    STAR      shift, and go to state 109
    DIV       shift, and go to state 110
    AND       shift, and go to state 111
    OR        shift, and go to state 112
    DOT       shift, and go to state 113
    LB        shift, and go to state 114


State 81

   53 Def: Specifier error SEMI •

    $default  reduce using rule 53 (Def)


State 82

   58 Dec: VarDec ASSIGNOP • Exp

    INT    shift, and go to state 68
    FLOAT  shift, and go to state 69
    ID     shift, and go to state 70
    MINUS  shift, and go to state 71
    NOT    shift, and go to state 72
    LP     shift, and go to state 73

    Exp  go to state 115


State 83

   54 Def: Specifier DecList error •

    $default  reduce using rule 54 (Def)


State 84

   52 Def: Specifier DecList SEMI •

    $default  reduce using rule 52 (Def)


State 85

   56 DecList: Dec COMMA • DecList

    ID  shift, and go to state 48

    VarDec   go to state 55
    DecList  go to state 116
    Dec      go to state 57


State 86

   30 VarList: ParamDec COMMA VarList •

    $default  reduce using rule 30 (VarList)


State 87

   43 Stmt: error SEMI •

    $default  reduce using rule 43 (Stmt)


State 88

   70 Exp: ID LP • Args RP
   71    | ID LP • RP
   88    | ID LP • error RP
   89    | ID LP • error SEMI

    error  shift, and go to state 117
    INT    shift, and go to state 68
    FLOAT  shift, and go to state 69
    ID     shift, and go to state 70
    MINUS  shift, and go to state 71
    NOT    shift, and go to state 72
    LP     shift, and go to state 73
    RP     shift, and go to state 118

    Exp   go to state 119
    Args  go to state 120


State 89

   86 Exp: MINUS error •

    $default  reduce using rule 86 (Exp)


State 90

   59 Exp: Exp • ASSIGNOP Exp
   60    | Exp • AND Exp
   61    | Exp • OR Exp
   62    | Exp • RELOP Exp
   63    | Exp • PLUS Exp
   64    | Exp • MINUS Exp
   65    | Exp • STAR Exp
   66    | Exp • DIV Exp
   68    | MINUS Exp •
   72    | Exp • LB Exp RB
   73    | Exp • DOT ID
   77    | Exp • ASSIGNOP error
   78    | Exp • AND error
   79    | Exp • OR error
   80    | Exp • RELOP error
   81    | Exp • PLUS error
   82    | Exp • MINUS error
   83    | Exp • STAR error
   84    | Exp • DIV error
   90    | Exp • LB error RB

    STAR  shift, and go to state 109
    DIV   shift, and go to state 110
    DOT   shift, and go to state 113
    LB    shift, and go to state 114

    $default  reduce using rule 68 (Exp)


State 91

   87 Exp: NOT error •

    $default  reduce using rule 87 (Exp)


State 92

   59 Exp: Exp • ASSIGNOP Exp
   60    | Exp • AND Exp
   61    | Exp • OR Exp
   62    | Exp • RELOP Exp
   63    | Exp • PLUS Exp
   64    | Exp • MINUS Exp
   65    | Exp • STAR Exp
   66    | Exp • DIV Exp
   69    | NOT Exp •
   72    | Exp • LB Exp RB
   73    | Exp • DOT ID
   77    | Exp • ASSIGNOP error
   78    | Exp • AND error
   79    | Exp • OR error
   80    | Exp • RELOP error
   81    | Exp • PLUS error
   82    | Exp • MINUS error
   83    | Exp • STAR error
   84    | Exp • DIV error
   90    | Exp • LB error RB

    DOT  shift, and go to state 113
    LB   shift, and go to state 114

    $default  reduce using rule 69 (Exp)


State 93

   85 Exp: LP error • RP

    RP  shift, and go to state 121


State 94

   59 Exp: Exp • ASSIGNOP Exp
   60    | Exp • AND Exp
   61    | Exp • OR Exp
   62    | Exp • RELOP Exp
   63    | Exp • PLUS Exp
   64    | Exp • MINUS Exp
   65    | Exp • STAR Exp
   66    | Exp • DIV Exp
   67    | LP Exp • RP
   72    | Exp • LB Exp RB
   73    | Exp • DOT ID
   77    | Exp • ASSIGNOP error
   78    | Exp • AND error
   79    | Exp • OR error
   80    | Exp • RELOP error
   81    | Exp • PLUS error
   82    | Exp • MINUS error
   83    | Exp • STAR error
   84    | Exp • DIV error
   90    | Exp • LB error RB

    ASSIGNOP  shift, and go to state 105
    RELOP     shift, and go to state 106
    PLUS      shift, and go to state 107
    MINUS     shift, and go to state 108
    STAR      shift, and go to state 109
    DIV       shift, and go to state 110
    AND       shift, and go to state 111
    OR        shift, and go to state 112
    DOT       shift, and go to state 113
    RP        shift, and go to state 122
    LB        shift, and go to state 114


State 95

   46 Stmt: RETURN error • SEMI

    SEMI  shift, and go to state 123


State 96

   39 Stmt: RETURN Exp • SEMI
   45     | RETURN Exp • error
   59 Exp: Exp • ASSIGNOP Exp
   60    | Exp • AND Exp
   61    | Exp • OR Exp
   62    | Exp • RELOP Exp
   63    | Exp • PLUS Exp
   64    | Exp • MINUS Exp
   65    | Exp • STAR Exp
   66    | Exp • DIV Exp
   72    | Exp • LB Exp RB
   73    | Exp • DOT ID
   77    | Exp • ASSIGNOP error
   78    | Exp • AND error
   79    | Exp • OR error
   80    | Exp • RELOP error
   81    | Exp • PLUS error
   82    | Exp • MINUS error
   83    | Exp • STAR error
   84    | Exp • DIV error
   90    | Exp • LB error RB

    error     shift, and go to state 124
    SEMI      shift, and go to state 125
    ASSIGNOP  shift, and go to state 105
    RELOP     shift, and go to state 106
    PLUS      shift, and go to state 107
    MINUS     shift, and go to state 108
    STAR      shift, and go to state 109
    DIV       shift, and go to state 110
    AND       shift, and go to state 111
    OR        shift, and go to state 112
    DOT       shift, and go to state 113
    LB        shift, and go to state 114


State 97

   47 Stmt: IF error • ELSE Stmt

    ELSE  shift, and go to state 126


State 98

   40 Stmt: IF LP • Exp RP Stmt
   41     | IF LP • Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 68
    FLOAT  shift, and go to state 69
    ID     shift, and go to state 70
    MINUS  shift, and go to state 71
    NOT    shift, and go to state 72
    LP     shift, and go to state 73

    Exp  go to state 127


State 99

   48 Stmt: WHILE error • RP
   49     | WHILE error • RC

    RP  shift, and go to state 128
    RC  shift, and go to state 129


State 100

   42 Stmt: WHILE LP • Exp RP Stmt

    INT    shift, and go to state 68
    FLOAT  shift, and go to state 69
    ID     shift, and go to state 70
    MINUS  shift, and go to state 71
    NOT    shift, and go to state 72
    LP     shift, and go to state 73

    Exp  go to state 130


State 101

   33 CompSt: LC DefList StmtList RC •

    $default  reduce using rule 33 (CompSt)


State 102

   35 StmtList: Stmt StmtList •

    $default  reduce using rule 35 (StmtList)


State 103

   44 Stmt: Exp error • SEMI

    SEMI  shift, and go to state 131


State 104

   37 Stmt: Exp SEMI •

    $default  reduce using rule 37 (Stmt)


State 105

   59 Exp: Exp ASSIGNOP • Exp
   77    | Exp ASSIGNOP • error

    error  shift, and go to state 132
    INT    shift, and go to state 68
    FLOAT  shift, and go to state 69
    ID     shift, and go to state 70
    MINUS  shift, and go to state 71
    NOT    shift, and go to state 72
    LP     shift, and go to state 73

    Exp  go to state 133


State 106

   62 Exp: Exp RELOP • Exp
   80    | Exp RELOP • error

    error  shift, and go to state 134
    INT    shift, and go to state 68
    FLOAT  shift, and go to state 69
    ID     shift, and go to state 70
    MINUS  shift, and go to state 71
    NOT    shift, and go to state 72
    LP     shift, and go to state 73

    Exp  go to state 135


State 107

   63 Exp: Exp PLUS • Exp
   81    | Exp PLUS • error

    error  shift, and go to state 136
    INT    shift, and go to state 68
    FLOAT  shift, and go to state 69
    ID     shift, and go to state 70
    MINUS  shift, and go to state 71
    NOT    shift, and go to state 72
    LP     shift, and go to state 73

    Exp  go to state 137


State 108

   64 Exp: Exp MINUS • Exp
   82    | Exp MINUS • error

    error  shift, and go to state 138
    INT    shift, and go to state 68
    FLOAT  shift, and go to state 69
    ID     shift, and go to state 70
    MINUS  shift, and go to state 71
    NOT    shift, and go to state 72
    LP     shift, and go to state 73
